this is a demo for shaimaa

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <div class="main">
 
             <div class="top">
-                <h1>Today's Task</h1>
-                <p>Wednes day, 11 May</p>
-
-                <div class="button">
-                    <Button type="submit"></Button>
+                <div class="text">
+                    <h1>Today's Task</h1>
+                    <p>Wednes day, 11 May</p>
                 </div>
+                <div class="button">
+                    <Button type="submit">+ New Task</Button>
+                </div>
+
             </div>
 
         </div>
